// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Touchable Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#ff9345",
        "borderColor": "#ff9345",
        "borderRadius": 3072,
        "borderWidth": 2,
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      Sample
    </Text>
  </View>
</View>
`;

exports[`Storyshots Atoms/Touchable Outline Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#EEEEEE",
        "borderColor": "#ff9345",
        "borderRadius": 3072,
        "borderWidth": 2,
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      Sample
    </Text>
  </View>
</View>
`;

exports[`Storyshots Atoms/Touchable Outline Round 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#EEEEEE",
        "borderColor": "#ff9345",
        "borderRadius": 12,
        "borderWidth": 2,
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      Sample
    </Text>
  </View>
</View>
`;

exports[`Storyshots Atoms/Touchable Outline Sharp 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#EEEEEE",
        "borderColor": "#ff9345",
        "borderRadius": 0,
        "borderWidth": 2,
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      Sample
    </Text>
  </View>
</View>
`;

exports[`Storyshots Atoms/Touchable Round 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#ff9345",
        "borderColor": "#ff9345",
        "borderRadius": 12,
        "borderWidth": 2,
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      Sample
    </Text>
  </View>
</View>
`;

exports[`Storyshots Atoms/Touchable Sharp 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#ff9345",
        "borderColor": "#ff9345",
        "borderRadius": 0,
        "borderWidth": 2,
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      Sample
    </Text>
  </View>
</View>
`;
